# zFISHer

./: .gitignore  README  README.md  pypackage.toml  pyproject.toml  test.txt  zfisher_dev.py
output/: AIP_output.xlsx
zFISHer/: .gitignore  __main__.py  version.py
zFISHer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zFISHer/config/: config.json  config_manager.py
zFISHer/data/: parameters.py
zFISHer/gui/: analysis.py  calculations.py  finish.py  guimanager.py  inputs.py  inputshandling.py  logger.py  process.py  punctapick.py  registrationXY.py  registrationZ.py  segmentation.py  segmentation_OLD.py  tktheme.py  welcome.py
zFISHer/output/: AIP_output.xlsx
zFISHer/output/processing/: dapinucleusbaseimg2.tif  masked_dna_mip.tif  nucleus_threshold_img.tif
zFISHer/output/processing/F1/Cy5/MIP/: F1_Cy5_MIP_.tif
zFISHer/output/processing/F1/Cy5/Z_SLICES/: F1_Cy5_z1.tif  F1_Cy5_z10.tif  F1_Cy5_z11.tif  F1_Cy5_z12.tif  F1_Cy5_z13.tif  F1_Cy5_z14.tif  F1_Cy5_z15.tif  F1_Cy5_z16.tif  F1_Cy5_z17.tif  F1_Cy5_z18.tif  F1_Cy5_z19.tif  F1_Cy5_z2.tif  F1_Cy5_z20.tif  F1_Cy5_z21.tif  F1_Cy5_z22.tif  F1_Cy5_z23.tif  F1_Cy5_z24.tif  F1_Cy5_z25.tif  F1_Cy5_z26.tif  F1_Cy5_z27.tif  (+51 more)
zFISHer/output/processing/SEGMENTATION/: dapinucleusbaseimg.tif  dapinucleusbaseimg2.tif  masked_dna_mip.tif  nucleus_threshold_img.tif
zFISHer/processing/: mip_maker.py  normalize_img.py  process_nd2.py  regXY.py  write_excel.py  z_slicer.py  z_slicer_old.py
zFISHer/processing/segmentation/: zFISHer_basic_nucseg.py
zFISHer/utils/: config.py  makedir.py  start.py
(+249 files in other folders)
