[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "zFISHer"
version = "0.1.0"
description = "Advanced image processing for multiplexed sequential FISH"
authors = [{name = "Seth Staller", email = "Seth.Staller@STJUDE.ORG"}]
license = {text = "TBD - Contact St. Jude for licensing details"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas~=1.5.0",
    "tk",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.4",
    "nd2reader>=3.3.0",
    "pystackreg>=0.2.7",
    "scipy>=1.12.0",
    "scikit-image>=0.22",
    "openpyxl>=3.1.2",
    "matplotlib"

]